<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/add_drug_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/black"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/add_drug_icon"
            android:contentDescription="@string/add_drug" />

        <ImageButton
            android:id="@+id/view_drugs_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/view_drugs"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/not_activated" />

        <ImageButton
            android:id="@+id/delete_drug_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/delete_drug"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_drug" />

        <ImageButton
            android:id="@+id/export_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/black"
            android:contentDescription="Export Drugs"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/export" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
